logs/freyja_examples/build.make.045.log.stderr
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In function ‘void gestureUpdate(const ConstPtr&)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:100:5: error: ‘drone’ was not declared in this scope
  100 |     drone.forward();
      |     ^~~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:101:5: error: ‘elif’ was not declared in this scope
  101 |   } elif (msg -> data == "Turn Right"){
      |     ^~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In function ‘int main(int, char**)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:140:5: error: ‘ref_state’ was not declared in this scope; did you mean ‘setstate’?
  140 |     ref_state = drone.return_state();
      |     ^~~~~~~~~
      |     setstate
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:140:23: error: request for member ‘return_state’ in ‘drone’, which is of non-class type ‘DroneType()’
  140 |     ref_state = drone.return_state();
      |                       ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/temporal_provider_node.dir/build.make:76: CMakeFiles/temporal_provider_node.dir/src/temporal_provider.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:967: CMakeFiles/temporal_provider_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
